Bug 359790 set text doesn't work correctly for XUL entry patch by nian.liu at sun.com r=aaronleventhal